--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,18 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container mt-5">
+  <h2>Produtos disponíveis:</h2>
+  <h3>Processadores:</h3>
+    <p>Intel Core i5</p>
+    <p>Intel Core i7</p>
+    <p>AMD Ryzen 5</p>
+    <p>AMD Ryzen 7</p>
+  <h3>Placas-mãe:</h3>
+    <p>Asus ROG </p>
+    <p>Gigabyte Aorus</p>
+    <p>ASRock Steel Legend</p>
+  <h3>Memórias RAM:</h3>
+    <p>Kingston Hiper X (4GB, 8GB, 16GB, 32GB, 64GB)</p>
+  <h3>Placas de Vídeo:</h3>
+    <p>Evga Geforce RTX 2060 6GB</p>
+    <p>Asus ROG Strix Geforce RTX 3060 6GB</p>
+    <p>Gigabyte Radeon RX 6600 XT EAGLE 8GB</p>
+</div>
